--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -916,6 +916,11 @@
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-mybatis3</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-recommended-dependencies</artifactId>
                 <version>${terasoluna.gfw.version}</version>
                 <type>pom</type>
