--- a/terasoluna-gfw-mybatis2/pom.xml
+++ b/terasoluna-gfw-mybatis2/pom.xml
@@ -8,7 +8,8 @@
         <relativePath>../terasoluna-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-mybatis2</artifactId>
-    <description>Functionalities about MyBatis2 for TERASOLUNA Global Framework</description>
+    <name>TERASOLUNA Global Framework for MyBatis2</name>
+    <description>Maven dependency definition for using mybatis2</description>
     <url>http://terasoluna.org</url>
 
     <dependencies>
