--- a/terasoluna-gfw-mybatis3/pom.xml
+++ b/terasoluna-gfw-mybatis3/pom.xml
@@ -8,7 +8,8 @@
         <relativePath>../terasoluna-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-mybatis3</artifactId>
-    <description>Functionalities about MyBatis3 for TERASOLUNA Global Framework</description>
+    <name>TERASOLUNA Global Framework for MyBatis3</name>
+    <description>Maven dependency definition for using mybatis3</description>
     <url>http://terasoluna.org</url>
 
     <dependencies>
