--- a/terasoluna-gfw-common/pom.xml
+++ b/terasoluna-gfw-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>terasoluna-gfw-parent</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1.RC1</version>
         <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-common</artifactId>
