Modified the relativePath in pom.xml. #119

--- a/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>terasoluna-gfw-parent</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>1.0.1-SNAPSHOT</version>
-        <relativePath>../terasoluna-parent/pom.xml</relativePath>
+        <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-recommended-dependencies</artifactId>
     <packaging>pom</packaging>
