update to 1.0.1.RELEASE #75

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1.RELEASE</version>
     <packaging>pom</packaging>
     <name>TERASOLUNA Global Framework Parent</name>
     <description>The parent of TERASOLUNA Global Framework</description>
@@ -934,7 +934,7 @@
     </distributionManagement>
     <properties>
         <!-- == TERASOLUNA == -->
-        <terasoluna.gfw.version>1.0.1-SNAPSHOT</terasoluna.gfw.version>
+        <terasoluna.gfw.version>1.0.1.RELEASE</terasoluna.gfw.version>
         <terasoluna.gfw.batch.version>1.0.0-SNAPSHOT</terasoluna.gfw.batch.version>
         <!-- == Google == -->
         <com.google.guava.version>13.0.1</com.google.guava.version>
