--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ script:
   - mvn install -f terasoluna-gfw-recommended-dependencies/pom.xml
   - mvn install -f terasoluna-gfw-recommended-web-dependencies/pom.xml
   - mvn install -f terasoluna-gfw-web/pom.xml
+  - mvn install -f terasoluna-gfw-security-core/pom.xml
   - mvn install -f terasoluna-gfw-security-web/pom.xml
