[WIP] Apply Spring IO Platform 1.0.2.RELEASE. #178

--- a/terasoluna-gfw-jpa/pom.xml
+++ b/terasoluna-gfw-jpa/pom.xml
@@ -18,17 +18,23 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        <!-- JPA API 2.0 -->
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
-        </dependency>
-        <!-- == End JPA == -->
 
         <!-- == Begin Spring == -->
         <!-- Spring Data -->
