--- a/terasoluna-gfw-web/pom.xml
+++ b/terasoluna-gfw-web/pom.xml
@@ -75,6 +75,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <!-- == End Spring == -->
 
@@ -82,14 +83,7 @@
         <!-- Servlet API 3.0 & JSP API 2.2 -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
-            <artifactId>tomcat-servlet-api</artifactId>
-            <version>7.0.40</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jsp-api</artifactId>
-            <version>7.0.40</version>
             <scope>provided</scope>
         </dependency>
         <!-- == End Tomcat == -->
@@ -110,7 +104,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.156</version>
             <scope>test</scope>
         </dependency>
         <!-- == End Database == -->
@@ -119,14 +112,17 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
         </dependency>
         <!-- == End Unit Test == -->
 
