Changed the exclustion artifact(dom4j:dom4j -> xml-apis:xml-apis) in terasoluna-gfw-jpa. #178

--- a/terasoluna-gfw-jpa/pom.xml
+++ b/terasoluna-gfw-jpa/pom.xml
@@ -20,8 +20,8 @@
             <artifactId>hibernate-core</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>dom4j</groupId>
-                    <artifactId>dom4j</artifactId>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -30,8 +30,8 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>dom4j</groupId>
-                    <artifactId>dom4j</artifactId>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
