--- a/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -46,6 +46,10 @@
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer-spring</artifactId>
+        </dependency>
         <!-- == End Dozer== -->
 
         <!-- == Begin Joda-Time == -->
