--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -410,6 +410,11 @@
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-jodatime</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-security-core</artifactId>
                 <version>${terasoluna.gfw.version}</version>
             </dependency>
