--- a/terasoluna-gfw-mybatis2/pom.xml
+++ b/terasoluna-gfw-mybatis2/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>mybatis</artifactId>
             <version>2.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm-ibatis</artifactId>
+            <version>4.1.3_ibatis</version>
+        </dependency>
     </dependencies>
 
 </project>
